--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -160,6 +160,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Tuple' object has no attribute 'size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m parametrization \u001b[38;5;241m=\u001b[39m pc\u001b[38;5;241m.\u001b[39mTuple(\n\u001b[1;32m      2\u001b[0m      pc\u001b[38;5;241m.\u001b[39mRealPositive(),\n\u001b[1;32m      3\u001b[0m      pc\u001b[38;5;241m.\u001b[39mReal(shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)),\n\u001b[1;32m      4\u001b[0m      pc\u001b[38;5;241m.\u001b[39mMatrixSymPosDef(dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m),\n\u001b[1;32m      5\u001b[0m  )\n\u001b[0;32m----> 6\u001b[0m \u001b[43mparametrization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Tuple' object has no attribute 'size'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "parametrization = pc.Tuple(\n",
+    "     pc.RealPositive(),\n",
+    "     pc.Real(shape=(2,3)),\n",
+    "     pc.MatrixSymPosDef(dim=3),\n",
+    " )\n",
+    "parametrization.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NamedTuple' object has no attribute 'size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 8\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mparametrization_cookbook\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mjax\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpc\u001b[39;00m\n\u001b[1;32m      3\u001b[0m parametrization \u001b[38;5;241m=\u001b[39m pc\u001b[38;5;241m.\u001b[39mNamedTuple(\n\u001b[1;32m      4\u001b[0m      mu\u001b[38;5;241m=\u001b[39mpc\u001b[38;5;241m.\u001b[39mReal(shape\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m),\n\u001b[1;32m      5\u001b[0m      Sigma\u001b[38;5;241m=\u001b[39mpc\u001b[38;5;241m.\u001b[39mMatrixSymPosDef(dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m),\n\u001b[1;32m      6\u001b[0m      df\u001b[38;5;241m=\u001b[39mpc\u001b[38;5;241m.\u001b[39mRealPositive()\n\u001b[1;32m      7\u001b[0m )\n\u001b[0;32m----> 8\u001b[0m \u001b[43mparametrization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NamedTuple' object has no attribute 'size'"
+     ]
+    }
+   ],
+   "source": [
+    "import parametrization_cookbook.jax as pc\n",
+    "\n",
+    "parametrization = pc.NamedTuple(\n",
+    "     mu=pc.Real(shape=3),\n",
+    "     Sigma=pc.MatrixSymPosDef(dim=3),\n",
+    "     df=pc.RealPositive()\n",
+    ")\n",
+    "parametrization.size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
