--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -445,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sdg4varselect-py3.10",
    "language": "python",
    "name": "python3"
   },
