--- a/examples/variable_selection_lmem.ipynb
+++ b/examples/variable_selection_lmem.ipynb
@@ -592,7 +592,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sdg4varselect-py3.10",
    "language": "python",
    "name": "python3"
   },
