--- a/examples/variable_selection_logistic.ipynb
+++ b/examples/variable_selection_logistic.ipynb
@@ -44,20 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def m(params, times, phi1, phi2, cov, **kwargs) -> jnp.ndarray:\n",
-    "    ksi = cov @ params.beta + phi2\n",
-    "    out = phi1[:, None] / (1 + jnp.exp(-(times - ksi[:, None]) / params.tau))\n",
+    "def m(params, times, psi, phi, **kwargs):\n",
+    "    out = psi[:, None] / (1 + jnp.exp(-(times - phi[:, None]) / params.tau))\n",
     "    assert out.shape == times.shape\n",
     "    return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,22 +72,23 @@
     "    def __init__(self, N=1, J=1, P=1, **kwargs):\n",
     "        AbstractHDModel.__init__(self, P=P)\n",
     "        AbstractMixedEffectsModel.__init__(self, N=N, J=J, **kwargs)\n",
-    "        self.add_latent_variables(\"phi1\")\n",
-    "        self.add_latent_variables(\"phi2\")\n",
+    "        self.add_latent_variables(\"psi\")\n",
+    "        self.add_latent_variables(\"phi\")\n",
     "\n",
     "    @property\n",
     "    def name(self):\n",
-    "        return f\"NLMEM{self.N}_J{self.J}_P{self.P}\"\n",
+    "        return f\"Logistic_N{self.N}_J{self.J}_P{self.P}\"\n",
     "\n",
     "    def init_parametrization(self):\n",
     "        self._parametrization = pc.NamedTuple(\n",
-    "            mean_latent=pc.Real(\n",
-    "                shape=(2,), scale=(10, 10), loc=jnp.array([0, 1000])\n",
-    "            ),  # 0.1),\n",
-    "            cov_latent=pc.MatrixDiagPosDef(dim=2, scale=(1, 10)),  # 0.1),\n",
-    "            tau=pc.Real(scale=1, loc=100),\n",
-    "            var_residual=pc.RealPositive(scale=1),\n",
-    "            beta=pc.Real(scale=1, shape=(self.P,)),\n",
+    "            mean_latent=pc.NamedTuple(\n",
+    "                mu_0=pc.Real(scale=10, loc=200),\n",
+    "                mu_1=pc.Real(scale=10, loc=1200),\n",
+    "            ),\n",
+    "            cov_latent=pc.MatrixDiagPosDef(dim=2, scale=(10, 1000)),\n",
+    "            tau=pc.Real(scale=10, loc=300),\n",
+    "            var_residual=pc.RealPositive(scale=10),\n",
+    "            beta=pc.Real(scale=10, shape=(self.P,)),\n",
     "        )\n",
     "        self.parametrization_size = self._parametrization.size\n",
     "\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "myModel = LogisticMixedEffectsModel(N=40*2, J=15, P=10)\n",
+    "myModel = LogisticMixedEffectsModel(N=40 * 2, J=15, P=10)\n",
     "algo.init_mcmc(myModel, adaptative_sd=False, sd={\"phi1\": 5, \"phi2\": 20})\n",
     "\n",
     "# p_star = myModel.new_params(\n",
@@ -619,7 +619,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sdg4varselect-py3.10",
    "language": "python",
    "name": "python3"
   },
