finish the example

--- a/examples/estimation_jm_nlmem.ipynb
+++ b/examples/estimation_jm_nlmem.ipynb
@@ -6,6 +6,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Work in progress"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
