--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Work in progress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "`sdg4varselect` depends on `jax` library but also from `parametrization_cookbook`, this is not mandatory but strongly recommended all the examples will use a specific parametrization.\n",
     "\n",
     "Let's start by importing all dependencies and the package :"
